<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hu.bertalan.bank.bertalanbankapp.ProfileFragment"
    >



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:fillViewport="true">




    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/profile_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <TextView
            android:text="@string/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/ps_firstName" />

        <TextView
            android:text="@string/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/ps_lastName" />


        <TextView
            android:text="@string/user_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/ps_country" />

        <TextView
            android:text="@string/user_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/ps_city" />

        <TextView
            android:text="@string/postalcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/ps_postalCode" />

        <TextView
            android:text="@string/streetname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/ps_streetName" />

        <TextView
            android:text="@string/streetnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/ps_streetNumber"
             />
        <TextView
            android:text="@string/email_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/ps_email"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Save"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:onClick="onSaveClick"
            android:id="@+id/ps_saveButton"/>


    </LinearLayout>
    </ScrollView>

</LinearLayout>
