<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hu.bertalan.bank.bertalanbankapp.LoginActivity"
    android:background="@color/fragmentBlue"
    android:animateLayoutChanges="true">

    <TextView
        android:text="@string/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:id="@+id/loginText"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/loginText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/emailLogin"
        android:hint="@string/email_hint"
         />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/emailLogin"
        android:layout_alignRight="@+id/emailLogin"
        android:layout_alignEnd="@+id/emailLogin"
        android:layout_marginTop="29dp"
        android:id="@+id/passwordLogin"
        android:hint="@string/pwd_hint"
        />

    <Button
        android:text="@string/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/passwordLogin"
        android:layout_alignRight="@+id/passwordLogin"
        android:layout_alignEnd="@+id/passwordLogin"
        android:onClick="submitOnClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:id="@+id/loginErrorText" />
</RelativeLayout>
